fixed navbar position issue adding z-index

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -24,6 +24,7 @@ body {
   position: sticky;
   background: #fff;
   top: 0;
+  z-index: 3;
   height: 55px;
   border-bottom: 1px solid #6d6d6d;
 }
